Fix description overflow

--- a/Front-End/everest/src/Projects/ProjectList.css
+++ b/Front-End/everest/src/Projects/ProjectList.css
@@ -143,6 +143,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-height: 400px;
   }
   
   .projectImage {
@@ -193,6 +194,7 @@
     color: rgb(0,0,0,0.6);
     width: 45vw;
     text-align: center;
+    overflow-y: hidden;
     /* font-size: large;
     font-family: "Baloo Tammudu 2", cursive;
     line-height: 1.7;
